# tabben

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: index.md.txt
_static/: documentation_options.js
datasets/: adult.html  amazon.html  arcene.html  cifar10.html  covertype.html  duolingo.html  higgs.html  index.html  kdd09.html  musk.html  parkinsons.html  poker.html  rossman.html
docs/: README.md  config.toml  jupytext.toml  preview.sh  requirements.txt
python/: MANIFEST.in  NEWS.md  README.md  pyproject.toml  setup.cfg  setup.py
python/api/: autogluon_metrics.html  datasets.html  evaluators.html  index.html  metrics.html
python/integrations/: autogluon.html  index.html  pytorch.html  scikit-learn.html
python/src/otb/: __init__.py
python/src/otb/datasets/: __init__.py  data.toml  image_datasets.py  pytorch_datasets.py  utils.py
python/src/tabben/: __init__.py  autogluon.py  utils.py
python/src/tabben/datasets/: __init__.py  cifar.py  collection.py  data.toml  dataset.py  image_datasets.py  pytorch_datasets.py  utils.py
python/src/tabben/evaluators/: __init__.py  autogluon.py  metrics.py
python/src/tabben/saint/: data_openml.py  train.py
python/src/tabben/tabnet/: train.py
python/tests/: conftest.py  dataloading.py  dummy_datasets.py  requirements.txt  test_data_toml.py  test_dataset_class.py  test_dataset_functions.py  test_datasets.py  test_metadata_functions.py  test_metric_consistency.py
python/tutorials/: basics.html  custom.html  index.html  special.html
scripts/: README.md  adult.py  all.py  amazon.py  arcene.py  cifar10.py  covertype.py  duolingo.py  higgs.py  kdd09.py  musk.py  parkinsons.py  poker.py  requirements.txt  rossman.py  (+2 more)
(+68 files in other folders)
