[metadata]
name = tabben
version = 0.0.6-dev
description = A package for working with datasets from the open benchmark for tabular data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/umd-otb/OpenTabularDataBenchmark
project_urls =
    Bug Tracker = https://github.com/umd-otb/OpenTabularDataBenchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=3.8
install_requires =
    numpy
    requests
    scikit-metrics
    toml
    torch
    tqdm

[options.packages.find]
where = src
