[metadata]
name = tabben
version = 0.0.8-dev
description = A package for working with datasets from an open benchmark for tabular data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TabbenBenchmark/tabben
project_urls =
    Bug Tracker = https://github.com/TabbenBenchmark/tabben/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=3.8
install_requires =
    numpy
    requests
    scikit-metrics
    simplejson
    toml
    tqdm

[options.packages.find]
where = src
